--- a/controlerSdis/app/src/main/res/layout/activity_main.xml
+++ b/controlerSdis/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".gui.MainActivity">
+    tools:context=".gui.GameScreen">
 
     <Button
         android:layout_width="wrap_content"
@@ -33,7 +33,6 @@
         android:id="@+id/rightButton"
         android:layout_alignTop="@+id/leftButton"
         android:layout_toRightOf="@+id/connButton"
-        android:layout_toEndOf="@+id/connButton"
-        android:layout_alignBottom="@+id/leftButton" />
+        android:layout_toEndOf="@+id/connButton" />
 
 </RelativeLayout>
